Updated library and friends pages

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,6 +1,6 @@
 <!-- Footer Section -->
-<div class="navbar navbar-light bg-faded justify-content-start">
-    <a class="navbar-brand text-center" href="#">
+<div class="navbar navbar-light bg-faded">
+    <a class="navbar-brand text-center">
         <img src="/assets/logo.png" width="105" height="30" alt="">
     </a>
 </div>
