--- a/views/partials/_searchbar.ejs
+++ b/views/partials/_searchbar.ejs
@@ -1,5 +1,5 @@
 <!-- Search Bar -->
-  <form class="form-inline" method="post" action="/books">
-    <input class="form-control col-sm-6 mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="input">
+  <form class="form-inline d-flex justify-content-center" method="post" action="/books">
+    <input class="form-control col-sm-6 mr-sm-2" type="text" placeholder="Enter title, author or ISBN" aria-label="Search" name="input">
     <button class="btn btn-outline-dark my-2 my-sm-0" value="Search">Search</button>
   </form>
