--- a/views/connections.ejs
+++ b/views/connections.ejs
@@ -19,48 +19,40 @@
 </head>
 
 <body>
-
-<% include ./partials/_navbar %>
-
-    <!-- Page Content -->
-    <div class="container">
-        <div class="jumbotron">
-            <h4 class="p-2">Book Club</h4>
-
-            <!-- Search Bar -->
-            <div class="container">
-                <div class="input-group col-sm-8 p-4" style="margin:auto">
-                    <input type="text" class="form-control">
-                    <span class="input-group-addon">Search</span>
+    <!-- Navigation -->
+    <% include ./partials/_navbar %>
+    
+            <!-- Page Content -->
+            <div class="jumbotron" style="margin:30px">
+                <p class="lead">Manage Your Connections</p>
+                <hr class="my-2">
+                <p>Search for friends below using their first and last names or their email address.</p>
+                <form>
+                    <div class="form-group d-flex justify-content-center p-4">
+                        <input class="form-control col-sm-6 mr-sm-2" placeholder="Find friends">
+                        <button class="btn btn-outline-dark my-2 my-sm-0" id="add-friend">Search</button>
+                    </div>
+                </form>
+                <div class="panel-body">
+                    <div class="row-lg">
+                        <ul class="list-group">
+                            <!-- <% for (var i = 0; i < title_loan.length; i++) { %> -->
+                                <li class="list-group-item flex-column justify-content-between">
+                                    <h6 style="color:#253C31">
+                                        Friend 1
+                                    </h6>
+                                    <span class="action-buttons">
+                                        <i class="fa fa-minus-square-o p-2" aria-hidden="true"></i>
+                                    </span>
+                                </li>
+                                <!-- <% } %> -->
+                        </ul>
+                    </div>
                 </div>
             </div>
-            
-            <!-- Manage Connections -->
-            <div class="container">
-                <ul class="list-group">
-                    <li class="list-group-item justify-content-between">
-                        Mendal Kwan
-                        <span class="actions">
-                            <i class="fa fa-minus-circle" aria-hidden="true"></i>
-                        </span>
-                    </li>
-                    <li class="list-group-item justify-content-between">
-                        Kevin More
-                        <span class="actions">
-                            <i class="fa fa-minus-circle" aria-hidden="true"></i>
-                        </span>
-                    </li>
-                    <li class="list-group-item justify-content-between">
-                        Dr. Claw
-                        <span class="actions">
-                            <i class="fa fa-minus-circle" aria-hidden="true"></i>
-                        </span>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-    </div>
+    
+            <!-- Footer -->
+            <% include ./partials/_footer %>
 </body>
 
 </html>
