--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -358,6 +358,7 @@ h3,
 h4,
 h5,
 h6 {
+  color:#253C31;
   margin-top: 0;
   margin-bottom: .5rem
 }
@@ -590,6 +591,7 @@ h6 {
 }
 
 .lead {
+  color:#253C31;
   font-size: 1.25rem;
   font-weight: 300
 }
