--- a/views/user_books.ejs
+++ b/views/user_books.ejs
@@ -24,7 +24,7 @@
 
         <!-- Page Content -->
         <div class="jumbotron" style="margin:30px">
-            <p class="lead">Manage Your Library</p>
+            <h6 class="lead">Manage Your Library</h6>
             <hr class="my-2">
             <p>Add books to your library for your friends to loan! Enter your book's ISBN or use your mobile phone to scan the
                 ISBN barcode.</p>
@@ -39,7 +39,7 @@
                     <ul class="list-group">
                         <% for (var i = 0; i < title_loan.length; i++) { %>
                             <li class="list-group-item flex-column justify-content-between">
-                                <h6 style="color:#253C31">
+                                <h6>
                                     <%= title_loan[i] %>
                                 </h6>
                                 <small>
@@ -68,7 +68,10 @@
     $(function () {
         $("#add-book").on("click", function (event) {
             event.preventDefault();
-            $("list-group-item").prependTo("<.list-group>")
+            var text = $(.form - control).val();
+            if text.length {
+                $("list-group").prependTo(".list-group")
+            }
         });
     });
 </script>
