Added connections query to route

--- a/views/connections.ejs
+++ b/views/connections.ejs
@@ -36,16 +36,15 @@
             <div class="panel-body">
                 <div class="row-lg">
                     <ul class="list-group">
-                        <!-- <% for (var i = 0; i < title_loan.length; i++) { %> -->
+                       
                         <li class="list-group-item flex-column justify-content-between">
                             <h6>
-                                Friend 1
+                                <%= friend %>
                             </h6>
                             <span class="action-buttons">
                                 <i class="fa fa-minus-square-o p-2" aria-hidden="true"></i>
                             </span>
                         </li>
-                        <!-- <% } %> -->
                     </ul>
                 </div>
             </div>
