--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5041,6 +5041,7 @@ tbody.collapse.show {
 }
 
 .card-img-top {
+
   border-top-right-radius: calc(.25rem - 1px);
   border-top-left-radius: calc(.25rem - 1px)
 }
@@ -6307,7 +6308,7 @@ button.close {
 }
 
 .carousel {
-  position: relative
+  position: relative;
 }
 
 .carousel-inner {
