--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,9 @@
   <!-- Navigation -->
   <% include ./partials/_navbar %>
   <!-- Banner -->
+  <div class="container p-4 justify-content-center">
   <% include ./partials/_banner %>
+  </div>
   <!-- Search Bar -->
   <% include ./partials/_searchbar %>
 
@@ -36,7 +38,7 @@
         <div class="row p-3">
           <% for (var i = 0; i < 12; i++) { %>
             <div class="col-md-4 text-center">
-              <img class="card-img-top mx-auto d-block" src="<%= thumbnails[i] %>" alt="Card image cap" style="width:initial">
+              <img class="card-img-top mx-auto d-block" src="<%= thumbnails[i] %>">
               <div class="card-block">
                 <h6 class="card-title" style="color:#253C31">
                   <%= titles[i] %>
