--- a/views/index_show.ejs
+++ b/views/index_show.ejs
@@ -23,19 +23,21 @@
     <% include ./partials/_navbar %>
 
         <!-- Search Bar -->
+        <div class="p-4"
         <% include ./partials/_searchbar %>
+        </div>
 
             <!-- Page Content -->
             <div class="container">
-                <h4 class="p-2" style="color:#253C31">Search Results</h4>
+                <h4 class="p-2" style="color:#253C31">Search Results:</h4>
             </div>
 
             <div class="container">
                 <div class="card-deck">
                     <div class="row p-3">
-                        <% for (var i = 0; i < 9; i++) { %>
+                        <% for (var i = 0; i < title.length; i++) { %>
                             <div class="col-md-4 text-center">
-                                <img class="card-img-top mx-auto d-block" src="<%= thumbnail[i] %>" alt="Card image cap" style="width:initial">
+                                <img class="card-img-top mx-auto d-block" src="<%= thumbnail[i] %>">
                                 <div class="card-block">
                                     <h6 class="card-title">
                                         <%= title[i] %>
