--- a/views/partials/_banner.ejs
+++ b/views/partials/_banner.ejs
@@ -1,6 +1,5 @@
 <!-- Homepage Carousel -->
-<div class="container p-4">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4500">
+  <div class="carousel slide" data-ride="carousel" data-interval="4500">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -26,4 +25,3 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-</div>
