--- a/views/connections.ejs
+++ b/views/connections.ejs
@@ -36,15 +36,19 @@
             <div class="panel-body">
                 <div class="row-lg">
                     <ul class="list-group">
-                       
+                        <% for (var i = 0; i < first.length; i++) { %>
                         <li class="list-group-item flex-column justify-content-between">
                             <h6>
-                                <%= friend %>
+                                <%= first %> <%= last %>
                             </h6>
+                            <small>
+                                <%= email %>
+                            </small>
                             <span class="action-buttons">
                                 <i class="fa fa-minus-square-o p-2" aria-hidden="true"></i>
                             </span>
                         </li>
+                        <% } %>
                     </ul>
                 </div>
             </div>
