--- a/views/partials/_banner.ejs
+++ b/views/partials/_banner.ejs
@@ -1,5 +1,5 @@
 <!-- Homepage Carousel -->
-  <div class="carousel slide" data-ride="carousel" data-interval="4500">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4500">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
