--- a/views/connections.ejs
+++ b/views/connections.ejs
@@ -8,8 +8,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/font-awesome-4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
@@ -26,7 +25,7 @@
         <div class="jumbotron" style="margin:30px">
             <h6 class="lead">Manage Your Connections</h6>
             <hr class="my-2">
-            <p>Search for friends below using their first and last names or their email address.</p>
+            <p>Search for friends by their first and last names or their email address.</p>
             <form>
                 <div class="form-group d-flex justify-content-center p-4">
                     <input class="form-control col-sm-6 mr-sm-2" placeholder="Find friends">
@@ -39,13 +38,13 @@
                         <% for (var i = 0; i < first.length; i++) { %>
                         <li class="list-group-item flex-column justify-content-between">
                             <h6>
-                                <%= first %> <%= last %>
+                                <%= first[i] %> <%= last[i] %>
                             </h6>
                             <small>
-                                <%= email %>
+                                <%= email[i] %>
                             </small>
                             <span class="action-buttons">
-                                <i class="fa fa-minus-square-o p-2" aria-hidden="true"></i>
+                                <i class="fa fa-minus-square-o p-2 delete-friend" aria-hidden="true" data-user-id="<%= userId[i] %>"></i>
                             </span>
                         </li>
                         <% } %>
@@ -59,3 +58,27 @@
 </body>
 
 </html>
+
+<script>
+    $(function () {
+        $(".list-group-item").each(function () {
+            const groupItem = this;
+            $(this).on("click", ".delete-friend", function () {
+                const user = Number($(this).data('user-id'));
+                
+                // const email = ($(this).data('email-id'));
+                
+                $.ajax({
+                    type: 'post',
+                    url: '/connections/delete',
+                    data: { user },
+                    success: function (result) {
+                    },
+                    failure: function(err) {
+                    }
+                });
+                groupItem.remove()
+            });
+        });
+    });
+</script>
