--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
   <!-- Navigation -->
   <% include ./partials/_navbar %>
   <!-- Banner -->
-  <div class="container p-4 justify-content-center">
+  <div class="container p-4">
   <% include ./partials/_banner %>
   </div>
   <!-- Search Bar -->
