--- a/views/connections.ejs
+++ b/views/connections.ejs
@@ -28,10 +28,19 @@
             <p>Search for friends by their first and last names or their email address.</p>
             <form>
                 <div class="form-group d-flex justify-content-center p-4">
-                    <input class="form-control col-sm-6 mr-sm-2" placeholder="Find friends">
-                    <button class="btn btn-outline-dark my-2 my-sm-0" id="add-friend">Search</button>
+                    <input class="form-control col-sm-6 mr-sm-2 search-friend" placeholder="Find friends">
+                    <button class="btn btn-outline-dark my-2 my-sm-0 fire-button create-list">Search</button>
                 </div>
             </form>
+            <div>
+                <table>
+                    <tr class="search-field">
+                        <td class="search-name"></td>
+                        <td class="search-email"></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
             <div class="panel-body">
                 <div class="row-lg">
                     <ul class="list-group">
@@ -61,6 +70,29 @@
 
 <script>
     $(function () {
+
+        $('.fire-button').on('click', function (event) {
+            event.preventDefault();
+            let input = $('.search-friend').val();
+            
+            $.ajax({
+                type: 'get',
+                url: '/connections/search',
+                data: { input: input },
+                success: function(results) {
+                    let newResults = JSON.parse(results);
+                    
+                    let name = $('.search-name').text(newResults[0].first_name + (' ') + (newResults[0].last_name));
+                    let email = $('.search-email').text(newResults[0].email);
+                    let addFriend = $('<td><i class="fa fa-plus" aria-hidden="true"></i></td>')
+
+                    $('.search-field').append(name, email, addFriend);
+                    
+                }
+            })
+        });
+
+
         $(".list-group-item").each(function () {
             const groupItem = this;
             $(this).on("click", ".delete-friend", function () {
