--- a/views/user_books.ejs
+++ b/views/user_books.ejs
@@ -77,13 +77,56 @@
                     console.log(JSON.parse(result));
                     var book = JSON.parse(result);
                     $(".list-group").append('<li class="list-group-item flex-column justify-content-between"></li>');
-                    var list = $(".list-group-item").last()
+                    var list = $(".list-group-item").last();
                     list.append($('<h6></h6>').text(book.title));
                     list.append($('<small></small').text('By ' + book.author));
                     list.append($('<span class="action-buttons">'));
                     var buttonList = $(".action-buttons").last();
-                    buttonList.append('<i class="fa fa-book p-2 status-button" aria-hidden="true" data-status="true"></i>').attr("data-user-book", book.bookId);
-                    buttonList.append('<i class="fa fa-minus-square-o p-2 delete-button" data-user-id="1" aria-hidden="true"></i>').attr("data-book-id", book.bookId);
+                    var buttonStatus = $('<i class="fa fa-book p-2 status-button" aria-hidden="true" data-status="true"></i>').attr("data-user-book", book.bookId);
+                    buttonList.append(buttonStatus);
+                    var buttonDelete = $('<i class="fa fa-minus-square-o p-2 delete-button" data-user-id="1" aria-hidden="true"></i>').attr("data-book-id", book.bookId);
+                    buttonList.append(buttonDelete);
+                    
+                    buttonDelete.on("click", function () {
+                        const bookId = Number($(this).data('book-id'));
+                        const userId = Number($(this).data('user-id'));
+                        $.ajax({
+                            type: 'post',
+                            url: '/library/delete',
+                            data: { bookId, userId },
+                            success: function (result) {
+                            },
+                            failure: function(err) {
+                            }
+                        });
+                        closestListItem = $(this).closest('.list-group-item');
+                        closestListItem.remove();
+                    });
+
+                    buttonStatus.on('click', function () {
+                        let showStatus = ($(this).data('status'));
+                        let newStatus = !showStatus;
+                        let userBook = ($(this).data('user-book'));
+                        
+                        $.ajax({
+                            type: 'post',
+                            url: '/library/status',
+                            data: { 
+                                status: newStatus,
+                                userBookId: userBook
+                            }
+                        });
+
+                        ($(this).toggleClass("red"));
+                        if(showStatus == true) {
+                            ($(this).data('status', false));
+                        } else {
+                            ($(this).data('status', true));
+                        }
+                    })
+
+
+
                 }
             });
         });
