Added barcode scanning to get isbn numbers

--- a/views/user_books.ejs
+++ b/views/user_books.ejs
@@ -29,7 +29,7 @@
                 ISBN barcode.</p>
             <form>
                 <div class="form-group d-flex justify-content-center p-4">
-                    <input class="form-control col-sm-6 mr-sm-2 text-box" placeholder="Add ISBN">
+                    <input id="barcodefield1" class="form-control col-sm-6 mr-sm-2 text-box" placeholder="Add ISBN">
                     <button class="btn btn-outline-dark my-2 my-sm-0 add-book">Add</button>
                 </div>
             </form>
