--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,8 @@
       <div class="card-deck">
         <div class="row p-3">
           <% for (var i = 0; i < 12; i++) { %>
-            <div class="col-md-4 text-center">
-              <img class="card-img-top mx-auto d-block" src="<%= thumbnails[i] %>">
+            <div class="col-md-4 text-center p-4">
+              <img class="card-img-top mx-auto d-block"  height="190px" src="<%= thumbnails[i] %>">
               <div class="card-block">
                 <h6 class="card-title" style="color:#253C31">
                   <%= titles[i] %>
