--- a/views/index_show.ejs
+++ b/views/index_show.ejs
@@ -36,8 +36,8 @@
                 <div class="card-deck">
                     <div class="row p-3">
                         <% for (var i = 0; i < title.length; i++) { %>
-                            <div class="col-md-4 text-center">
-                                <img class="card-img-top mx-auto d-block" src="<%= thumbnail[i] %>">
+                            <div class="col-md-4 text-center p-2">
+                                <img class="card-img-top mx-auto d-block" height="190px" src="<%= thumbnail[i] %>">
                                 <div class="card-block">
                                     <h6 class="card-title">
                                         <%= title[i] %>
