--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -11,10 +11,15 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="nav navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#portfolio">Register</a>
+                <a class="nav-link js-scroll-trigger" href="#portfolio">Hello, Homer!</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#about">Login</a>
+              <li class="dropdown">
+                  <input type="image" src="/assets/homermaggie.gif" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                    <a href="/library" class="dropdown-item">Library</a>
+                    <a href="/connections" class="dropdown-item">Connections</a>
+                    <button class="dropdown-item">Logout</button>
+                  </div>
               </li>
             </ul>
           </div>
