--- a/views/partials/_banner.ejs
+++ b/views/partials/_banner.ejs
@@ -7,13 +7,13 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img class="d-block img-fluid" src="/assets/banner1.jpg" alt="First slide">
+        <img class="img-fluid" src="/assets/banner1.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="/assets/banner2.jpg" alt="Second slide">
+        <img class="img-fluid" src="/assets/banner2.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="/assets/banner3.jpg" alt="Third slide">
+        <img class="img-fluid" src="/assets/banner3.jpg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
