--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -2,22 +2,22 @@
   <nav class="navbar navbar-toggleable-md navbar-light bg-faded justify-content-start">
         <div class="container d-flex">
           <a class="navbar-brand navbar-brand-left" href="/">
-            <img class="img-fluid" src="/assets/logo.png" width="210" height="60" alt="">
+            <img class="img-fluid" src="/assets/logo.png" width="210" height="60">
           </a>
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler align-self-center" type="button" data-toggle="dropdown" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
+          <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#portfolio">Hello, Homer!</a>
+                <a class="nav-link js-scroll-trigger" href="/">Hello, Homer!</a>
               </li>
-              <li class="dropdown">
+              <li class="dropdown" id="navbarResponsive">
                   <input type="image" src="/assets/homermaggie.gif" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <a href="/library" class="dropdown-item">Library</a>
-                    <a href="/connections" class="dropdown-item">Connections</a>
+                    <a href="/library" class="dropdown-item">Manage Library</a>
+                    <a href="/connections" class="dropdown-item">Manage Connections</a>
                     <button class="dropdown-item">Logout</button>
                   </div>
               </li>
