Added promise safeguard

--- a/views/index_show.ejs
+++ b/views/index_show.ejs
@@ -47,6 +47,8 @@
                                     </p>
                                     <div class="row">
                                         <div class="col-sm">
+                                            <% var test = lenders[i].first_name %>
+                                            <%= test %>
                                             <i class="fa fa-exchange" aria-hidden="true"></i>
                                         </div>
                                         <div class="col-sm">
